--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-info" id="crear1">Crear</button>
+      <button type="button" class="btn btn-info" id="btncrear">Crear</button>
       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Cancelar</button>
       
     </div>
