--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 <script src="js/helpers/main.js"></script>
 <script src="js/api/request.js"></script>
 <script src="js/helpers/draggandDrop.js"></script>
+<script src="https://kit.fontawesome.com/49807a4f3d.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
